--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,13 @@ on:
     branches:
       - '**'
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_14.1.app/Contents/Developer
+
 jobs:
   test:
     name: Test
-    runs-on: macos-latest
+    runs-on: macos-12
     strategy:
       matrix:
         destination:
